PIG-1032: FINDBUGS: DM_STRING_CTOR: Method invokes inefficient new String(String) constructor (olgan)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/pig/trunk@828891 13f79535-47bb-0310-9956-ffa450edef68